--- a/pages/content/amp-dev/sambo/index.html
+++ b/pages/content/amp-dev/sambo/index.html
@@ -13,6 +13,35 @@ flyout:
   description: Get started with AMP
   icon: guides-documents
 
+highlight_guides:
+  websites:
+    - /content/amp-dev/sambo/guide-tutorial/develop-2/style_and_layout-2/index.md
+    - /content/amp-dev/sambo/guide-tutorial/optimize-measure-2/discovery.md
+    - /content/amp-dev/sambo/guide-tutorial/learn-2/amp-caches-and-cors-2/amp-cors-requests.md
+    - /content/amp-dev/sambo/guide-tutorial/learn-2/validation-workflow-2/validate_amp.md
+    - /content/amp-dev/sambo/guide-tutorial/learn-2/amp-html-layout-2/index.md
+    - /content/amp-dev/sambo/guide-tutorial/develop-2/animations-2/introduction_to_animations.md
+  stories:
+    - /content/amp-dev/sambo/guide-tutorial/develop-2/style_and_layout-2/index.md
+    - /content/amp-dev/sambo/guide-tutorial/optimize-measure-2/discovery.md
+    - /content/amp-dev/sambo/guide-tutorial/learn-2/amp-html-layout-2/index.md
+    - /content/amp-dev/sambo/guide-tutorial/learn-2/amp-caches-and-cors-2/amp-cors-requests.md
+    - /content/amp-dev/sambo/guide-tutorial/learn-2/validation-workflow-2/validate_amp.md
+    - /content/amp-dev/sambo/guide-tutorial/learn-2/amp-caches-and-cors-2/how_amp_pages_are_cached.md
+  ads:
+    - /content/amp-dev/sambo/guide-tutorial/learn-2/intro-to-amphtml-ads.md
+    - /content/amp-dev/sambo/guide-tutorial/develop-2/style_and_layout-2/index.md
+    - /content/amp-dev/sambo/guide-tutorial/learn-2/amp-caches-and-cors-2/amp-cors-requests.md
+    - /content/amp-dev/sambo/guide-tutorial/learn-2/validation-workflow-2/validate_amp.md
+    - /content/amp-dev/sambo/guide-tutorial/learn-2/amp-html-layout-2/index.md
+    - /content/amp-dev/sambo/guide-tutorial/develop-2/animations-2/introduction_to_animations.md
+  email:
+    - /content/amp-dev/sambo/guide-tutorial/start-2/create_email.md
+    - /content/amp-dev/sambo/guide-tutorial/develop-2/testing_amp_emails.md
+    - /content/amp-dev/sambo/guide-tutorial/learn-2/email_fundamentals.md
+    - /content/amp-dev/sambo/guide-tutorial/develop-2/amp_email_best_practices.md
+    - /content/amp-dev/sambo/guide-tutorial/learn-2/email-spec/amp-email-format.md
+
 recent_guides: !g.yaml /shared/data/recent-guides.yaml
 
 guides:
@@ -21,31 +50,31 @@ guides:
     headline: Start
     text: Building a 'Hello World' page and try adding your first interactive feature to an AMP page.
     links:
-      - /content/amp-dev/sambo/guide-tutorial/start/create/basic_markup.md
+      - /content/amp-dev/sambo/guide-tutorial/start-2/create-2/basic_markup.md
   learn:
     icon_name: learn
     headline: Learn
     text: Building a 'Hello World' page and try adding your first interactive feature to an AMP page.
     links:
-      - /content/amp-dev/sambo/guide-tutorial/learn/spec/amphtml.md
+      - /content/amp-dev/sambo/guide-tutorial/learn-2/spec-2/amphtml.md
   develop:
     icon_name: develop
     headline: Develop
     text: "Create every content, layout, and feature your website needs."
     links:
-      - /content/amp-dev/sambo/guide-tutorial/develop/style_and_layout/index.md
+      - /content/amp-dev/sambo/guide-tutorial/develop-2/style_and_layout-2/index.md
   integration:
     icon_name: integration
     headline: Integrate
     text: "Combine your pages with non-AMP pages, a PWA, native apps and more."
     links:
-      - /content/amp-dev/sambo/guide-tutorial/integrate/integrate-with-apps.md
+      - /content/amp-dev/sambo/guide-tutorial/integrate-2/integrate-with-apps.md
   optimize:
     icon_name: optimize
     headline: Optimize & Measure
     text: "Make more out of your AMP pages through analytics, optimal delivery and caching."
     links:
-      - /content/amp-dev/sambo/guide-tutorial/optimize-measure/configure-analytics/index.md
+      - /content/amp-dev/sambo/guide-tutorial/optimize-measure-2/configure-analytics-2/index.md
 
 ---
 <section class="ap--section">
