added AMP to fix unhashable items

--- a/pages/content/amp-dev/sambo/guide-tutorial/index.html
+++ b/pages/content/amp-dev/sambo/guide-tutorial/index.html
@@ -1,5 +1,5 @@
 ---
-$title: [= format|capitalize =] Guide & Tutorial
+$title: AMP [= format|capitalize =] Guide & Tutorial
 $titles:
   navigation: Tutorials
 $view: /views/overview/guides.j2
