--- a/pages/content/amp-dev/sambo/guide-tutorial/index.html
+++ b/pages/content/amp-dev/sambo/guide-tutorial/index.html
@@ -1,5 +1,5 @@
 ---
-$title: AMP [= format|capitalize =] Guide & Tutorial
+$title: ABC [= format|capitalize =] Guide & Tutorial
 $titles:
   navigation: Tutorials
 $view: /views/overview/guides.j2
@@ -94,7 +94,7 @@ guides:
     </div>
     <h4 class="ap-o-card-grid-card-headline">Start</h4>
     <p class="ap-o-card-grid-card-copy">Building a 'Hello World' page and try adding your first interactive feature to an AMP page.</p>
-    <a href="start/create/basic_markup.md"
+    <a href="start-2/create-2/basic_markup.md"
       class="ap-m-lnk">
       <div class="ap-a-ico ap-m-lnk-icon">
         {% do doc.icons.useIcon('icons/internal.svg') %}
@@ -110,7 +110,7 @@ guides:
     </div>
     <h4 class="ap-o-card-grid-card-headline">Integrate</h4>
     <p class="ap-o-card-grid-card-copy">Combine your pages with non-AMP pages, a PWA, native apps and more.</p>
-    <a href="integrate/integrate-with-apps.md"
+    <a href="integrate-2/integrate-with-apps.md"
       class="ap-m-lnk">
       <div class="ap-a-ico ap-m-lnk-icon">
         {% do doc.icons.useIcon('icons/internal.svg') %}
@@ -126,7 +126,7 @@ guides:
     </div>
     <h4 class="ap-o-card-grid-card-headline">Learn</h4>
     <p class="ap-o-card-grid-card-copy">Get to know how AMP is different and acquire the fundamentals for how AMP works.</p>
-    <a href="learn/spec/amphtml.md"
+    <a href="learn-2/spec-2/amphtml.md"
       class="ap-m-lnk">
       <div class="ap-a-ico ap-m-lnk-icon">
         {% do doc.icons.useIcon('icons/internal.svg') %}
@@ -142,7 +142,7 @@ guides:
     </div>
     <h4 class="ap-o-card-grid-card-headline">Optimize & Measure</h4>
     <p class="ap-o-card-grid-card-copy">Make more out of your AMP pages through analytics, optimal delivery and caching.</p>
-    <a href="optimize-measure/configure-analytics/index.md"
+    <a href="optimize-measure-2/configure-analytics-2/index.md"
       class="ap-m-lnk">
       <div class="ap-a-ico ap-m-lnk-icon">
         {% do doc.icons.useIcon('icons/internal.svg') %}
@@ -158,7 +158,7 @@ guides:
     </div>
     <h4 class="ap-o-card-grid-card-headline">Develop</h4>
     <p class="ap-o-card-grid-card-copy">Create every content, layout, and feature your website needs.</p>
-    <a href="develop/style_and_layout/index.md"
+    <a href="develop-2/style_and_layout-2/index.md"
       class="ap-m-lnk">
       <div class="ap-a-ico ap-m-lnk-icon">
         {% do doc.icons.useIcon('icons/internal.svg') %}
@@ -186,7 +186,7 @@ guides:
     </div>
     <h4 class="ap-o-card-grid-card-headline">Start</h4>
     <p class="ap-o-card-grid-card-copy">Building a 'Hello World' page and try adding your first interactive feature to an AMP page.</p>
-    <a href="start/visual_story/index.md"
+    <a href="start-2/visual_story-2/index.md"
       class="ap-m-lnk">
       <div class="ap-a-ico ap-m-lnk-icon">
         {% do doc.icons.useIcon('icons/internal.svg') %}
@@ -202,7 +202,7 @@ guides:
     </div>
     <h4 class="ap-o-card-grid-card-headline">Learn</h4>
     <p class="ap-o-card-grid-card-copy">Get to know how AMP is different and acquire the fundamentals for how AMP works.</p>
-    <a href="learn/common_attributes.md"
+    <a href="learn-2/common_attributes.md"
       class="ap-m-lnk">
       <div class="ap-a-ico ap-m-lnk-icon">
         {% do doc.icons.useIcon('icons/internal.svg') %}
@@ -218,7 +218,7 @@ guides:
     </div>
     <h4 class="ap-o-card-grid-card-headline">Optimize & Measure</h4>
     <p class="ap-o-card-grid-card-copy">Make more out of your AMP pages through analytics, optimal delivery and caching.</p>
-    <a href="optimize-measure/discovery.md"
+    <a href="optimize-measure-2/discovery.md"
       class="ap-m-lnk">
       <div class="ap-a-ico ap-m-lnk-icon">
         {% do doc.icons.useIcon('icons/internal.svg') %}
@@ -234,7 +234,7 @@ guides:
     </div>
     <h4 class="ap-o-card-grid-card-headline">Develop</h4>
     <p class="ap-o-card-grid-card-copy">Create every content, layout, and feature your website needs.</p>
-    <a href="develop/style_and_layout/index.md"
+    <a href="develop-2/style_and_layout-2/index.md"
       class="ap-m-lnk">
       <div class="ap-a-ico ap-m-lnk-icon">
         {% do doc.icons.useIcon('icons/internal.svg') %}
@@ -253,7 +253,7 @@ guides:
     </div>
     <h4 class="ap-o-card-grid-card-headline">Start</h4>
     <p class="ap-o-card-grid-card-copy">Building a 'Hello World' page and try adding your first interactive feature to an AMP page.</p>
-    <a href="start/create_amphtml_ad/index.md"
+    <a href="start-2/create_amphtml_ad-2/index.md"
       class="ap-m-lnk">
       <div class="ap-a-ico ap-m-lnk-icon">
         {% do doc.icons.useIcon('icons/internal.svg') %}
@@ -269,7 +269,7 @@ guides:
     </div>
     <h4 class="ap-o-card-grid-card-headline">Learn</h4>
     <p class="ap-o-card-grid-card-copy">Get to know how AMP is different and acquire the fundamentals for how AMP works.</p>
-    <a href="learn/intro-to-amphtml-ads.md"
+    <a href="learn-2/intro-to-amphtml-ads.md"
       class="ap-m-lnk">
       <div class="ap-a-ico ap-m-lnk-icon">
         {% do doc.icons.useIcon('icons/internal.svg') %}
@@ -285,7 +285,7 @@ guides:
     </div>
     <h4 class="ap-o-card-grid-card-headline">Optimize & Measure</h4>
     <p class="ap-o-card-grid-card-copy">Make more out of your AMP pages through analytics, optimal delivery and caching.</p>
-    <a href="optimize-measure/tracking-engagement.md"
+    <a href="optimize-measure-2/tracking-engagement.md"
       class="ap-m-lnk">
       <div class="ap-a-ico ap-m-lnk-icon">
         {% do doc.icons.useIcon('icons/internal.svg') %}
@@ -301,7 +301,7 @@ guides:
     </div>
     <h4 class="ap-o-card-grid-card-headline">Develop</h4>
     <p class="ap-o-card-grid-card-copy">Create every content, layout, and feature your website needs.</p>
-    <a href="develop/style_and_layout/index.md"
+    <a href="develop-2/style_and_layout-2/index.md"
       class="ap-m-lnk">
       <div class="ap-a-ico ap-m-lnk-icon">
         {% do doc.icons.useIcon('icons/internal.svg') %}
