more AMP --> ABC

--- a/pages/content/amp-dev/about/websites-2021.html
+++ b/pages/content/amp-dev/about/websites-2021.html
@@ -1,7 +1,7 @@
 ---
-$title: AMP Websites
+$title: ABC Websites
 $view: /views/2021/base.html
-description: 'AMP is a simple and robust format to ensure your website is fast, user-first, and makes money. AMP
+description: 'ABC is a simple and robust format to ensure your website is fast, user-first, and makes money. ABC
 provides long-term success for your web strategy with distribution across ...'
 sharing_images:
   square: /static/img/sharing/about-websites-1x1.png
@@ -9,7 +9,7 @@ sharing_images:
 cards:
   - icon: icon-flash
     headline: Lightning Speed
-    text: AMP pages load near instantly – across all devices and platforms.
+    text: ABC pages load near instantly – across all devices and platforms.
   - icon: icon-build
     headline: Easy Building
     text: 'You can often convert your entire archive in days – especially when using common CMS like WordPress or Drupal.'
@@ -18,13 +18,13 @@ cards:
     text: 'You can use CSS to customize your styling and dynamic data to fetch the freshest data where needed.'
   - icon: icon-performance
     headline: Ensure performance
-    text: 'It takes a lot of time and effort to build a great website. AMP components are already optimized for the best performance.'
+    text: 'It takes a lot of time and effort to build a great website. ABC components are already optimized for the best performance.'
   - icon: icon-touch-points
     headline: Various web touch points
-    text: 'Used by global platforms like Google, Bing and Twitter, AMP allows users a native-feeling experience across all platforms by defaulting to AMP pages when available.'
+    text: 'Used by global platforms like Google, Bing and Twitter, ABC allows users a native-feeling experience across all platforms by defaulting to ABC pages when available.'
   - icon: icon-heart
     headline: Open web
-    text: 'The AMP Project is an open source initiative to protect the future of the web by delivering a better, faster and more user-friendly experience.'
+    text: 'The ABC Project is an open source initiative to protect the future of the web by delivering a better, faster and more user-friendly experience.'
 success_stories:
   - !g.doc /content/amp-dev/runner/success-stories/washingtonpost.yaml
   - !g.doc /content/amp-dev/runner/success-stories/teads.yaml
@@ -36,11 +36,11 @@ success_stories:
   <section class="ap-stage">
     <div class="ap-stage-text">
       <div class="ap-text-block">
-        <h2>{{ _('AMP Websites') }}</h2>
+        <h2>{{ _('ABC Websites') }}</h2>
         <h1>{{ _('A framework that amplifies page experience.') }}</h1>
         <p class="ap-p-large">
-          {{ _('AMP is a simple and robust web components framework that makes
-          it easy to build fast websites that are user-first and make money. AMP
+          {{ _('ABC is a simple and robust web components framework that makes
+          it easy to build fast websites that are user-first and make money. ABC
           provides long-term success for your web strategy with distribution
           across popular platforms and reduced operating costs.') }}
         </p>
@@ -49,7 +49,7 @@ success_stories:
           class="ap-button --inverted"
           href="{{ g.doc('/content/amp-dev/documentation/index.html', locale=doc.locale).url.path }}"
         >
-          {{ _('Get started with AMP') }}
+          {{ _('Get started with ABC') }}
         </a>
       </div>
     </div>
@@ -82,7 +82,7 @@ success_stories:
       <div class="ap-text-media-col">
         <div class="ap-text-block">
           <p>
-            {{ _('Quickly build pages with AMP’s extensive component library.
+            {{ _('Quickly build pages with ABC’s extensive component library.
             These components are copy-and-pastable and meet a wide range of UI
             and functionality needs. They are customizable in behavior and style
             through attributes and CSS. Best of all, they have a team of
@@ -98,10 +98,10 @@ success_stories:
         {% endwith %}
 
         <p>
-          {{ _('Want just the components without the AMP ecosystem? ')}}
+          {{ _('Want just the components without the ABC ecosystem? ')}}
           <a
             href="https://bentojs.dev/get-started/"
-            >Check out Bento AMP</a
+            >Check out Bento ABC</a
           >!
         </p>
       </div>
@@ -113,19 +113,19 @@ success_stories:
 
   <section class="ap-center-stage">
     <div class="ap-center-stage-content">
-      <h2 class="ap-h2">{{ _('How AMP works for you') }}</h2>
+      <h2 class="ap-h2">{{ _('How ABC works for you') }}</h2>
       <p class="ap-center-stage-copy ap-p-large">
-        {{ _("AMP meets you exactly where you are. Whether you're building a
-        site from scratch, using a CMS or optimizing an in-house solution, AMP
-        can help! AMP’s built-in validation system guides your development
-        process, ensuring your page is performant and user-first. AMP comes with
+        {{ _("ABC meets you exactly where you are. Whether you're building a
+        site from scratch, using a CMS or optimizing an in-house solution, ABC
+        can help! ABC’s built-in validation system guides your development
+        process, ensuring your page is performant and user-first. ABC comes with
         built-in accessibility and compatibility across browsers.") }}
       </p>
       <a
         class="ap-button --inverted"
         href="{{ g.doc('/content/amp-dev/about/how-amp-works.html', locale=doc.locale).url.path }}"
       >
-        {{ _('Learn how AMP works') }}
+        {{ _('Learn how ABC works') }}
       </a>
     </div>
   </section>
@@ -190,8 +190,8 @@ success_stories:
         <div class="ap-text-block">
           <p>
             {{ _('Select a ready-to-go framework or integration-enabled CMS to
-            get an AMP valid site up and running, fast. These platforms give you
-            all the benefits of AMP without all the built-from-scratch hassle.')
+            get an ABC valid site up and running, fast. These platforms give you
+            all the benefits of ABC without all the built-from-scratch hassle.')
             }}
           </p>
         </div>
@@ -221,8 +221,8 @@ success_stories:
     <div class="ap-text-media --thirds --center --mobile-reverse">
       <div class="ap-text-media-col">
         <div class="ap-text-block">
-          <h2 class="ap-h1">{{ _('Check out AMP in action') }}</h2>
-          <p>{{ _('Exemplary websites built with AMP out in the wild.') }}</p>
+          <h2 class="ap-h1">{{ _('Check out ABC in action') }}</h2>
+          <p>{{ _('Exemplary websites built with ABC out in the wild.') }}</p>
         </div>
       </div>
     </div>
@@ -236,7 +236,7 @@ success_stories:
     <div class="ap-text-media">
       <div class="ap-text-media-col">
         <amp-img
-          alt="{{ _('AMP Contributors in front of GitHub issues') }}"
+          alt="{{ _('ABC Contributors in front of GitHub issues') }}"
           src="/static/img/about/start-contributing.jpg"
           width="924"
           height="656"
@@ -248,7 +248,7 @@ success_stories:
         <div class="ap-text-block">
           <h2 class="ap-h1">{{ _('Get involved') }}</h2>
           <p>
-            {{ _('AMP is open source! This means it’s built by the community,
+            {{ _('ABC is open source! This means it’s built by the community,
             for the community with the OpenJS foundation. There are many ways to
             contribute, including implementing features, fixing bugs and writing
             documentation! ') }}
@@ -269,15 +269,15 @@ success_stories:
     <div class="ap-center-stage-content">
       <h2 class="ap-h2 ap-center-stage-headline">{{ _('Get started') }}</h2>
       <p class="ap-center-stage-copy ap-p-large">
-        {{ _("Ready to start building websites with AMP? Click the button below
-        to find step one of your AMP journey!") }}
+        {{ _("Ready to start building websites with ABC? Click the button below
+        to find step one of your ABC journey!") }}
       </p>
 
       <a
         class="ap-button --inverted"
         href="{{ g.doc('/content/amp-dev/documentation/index.html', locale=doc.locale).url.path }}"
       >
-        {{ _('Get started with AMP') }}
+        {{ _('Get started with ABC') }}
       </a>
     </div>
   </section>
