--- a/pages/content/amp-dev/documentation/index.html
+++ b/pages/content/amp-dev/documentation/index.html
@@ -14,7 +14,7 @@ frameworks:
       id: nextjs
       width: 102
       height: 64
-    text: "Turn any React page into an AMP page."
+    text: "Turn any React page into an ABC page."
     url: https://nextjs.org/docs/advanced-features/amp-support/introduction
   - name: WordPress
     headline: WordPress
@@ -22,7 +22,7 @@ frameworks:
       id: wordpress-inverted
       width: 64
       height: 64
-    text: "All the AMP benefits in the WordPress CMS."
+    text: "All the ABC benefits in the WordPress CMS."
     url: https://amp-wp.org/documentation/success-with-wordpress/
   - name: Eleventy
     headline: 11ty
@@ -45,7 +45,7 @@ frameworks:
         </div>
       </div>
       <div class="ap-text-block">
-        <h1 class="ap-h1 ap-logo-stage-headline">{{ _('Start building websites with AMP') }}</h1>
+        <h1 class="ap-h1 ap-logo-stage-headline">{{ _('Start building websites with ABC') }}</h1>
       </div>
     </div>
   </section>
@@ -57,8 +57,8 @@ frameworks:
           {{ _('Create a website') }}
         </h2>
         <p>
-          {{ _('AMP is the ultimate team player. Many CMS\' and frameworks have AMP integrations to get your site up and
-          running as quickly as an AMP page loads! If you\'re using an in-house solution, AMP provides tools and
+          {{ _('ABC is the ultimate team player. Many CMS\' and frameworks have ABC integrations to get your site up and
+          running as quickly as an ABC page loads! If you\'re using an in-house solution, ABC provides tools and
           optimizations for easy integration. Keep scrolling to find the best solution to amplify your site and delight
           your users.') }}
         </p>
@@ -67,18 +67,18 @@ frameworks:
     <div class="ap-text-aside-item --right">
       <div class="ap-text-block">
         <h2>
-          {{ _('Learn AMP') }}
+          {{ _('Learn ABC') }}
         </h2>
         <p>
-          {{ _('AMP is different from other frameworks. Build rich and interactive web experiences with an extensive
+          {{ _('ABC is different from other frameworks. Build rich and interactive web experiences with an extensive
           library of HTML components. Copy, paste and customize components to quickly and easily build pages that put the
-          user-first and keep your site performant. Start coding your first AMP page to begin learning the basics or start
-          mastering web development, the AMP way.') }}
+          user-first and keep your site performant. Start coding your first ABC page to begin learning the basics or start
+          mastering web development, the ABC way.') }}
         </p>
       </div>
       <a class="ap-button"
         href="{{ g.doc('/content/amp-dev/sambo/guide-tutorial/start/create/index.md', locale=doc.locale).url.path }}">
-        {{ _('Build your first AMP page') }}</a>
+        {{ _('Build your first ABC page') }}</a>
     </div>
     <div class="ap-text-aside-item --end">
       <div class="ap-text-block">
@@ -86,8 +86,8 @@ frameworks:
           {{ _('Start building, quickly') }}
         </h2>
         <p>
-          {{ _('Select a ready-to-go framework or integration-enabled CMS to get an AMP valid site up and running, fast.
-          These platforms give you all the benefits of AMP without all the built-from-scratch hassle.') }}
+          {{ _('Select a ready-to-go framework or integration-enabled CMS to get an ABC valid site up and running, fast.
+          These platforms give you all the benefits of ABC without all the built-from-scratch hassle.') }}
         </p>
       </div>
       {% with %}
@@ -166,14 +166,14 @@ frameworks:
             {{ _('Page Experience, optimized') }}
           </h2>
           <p>
-            {{ _('If you’re working with a custom or in-house solution, AMP can meet you there! Through tools like the
-            AMP optimizer, you can apply common performance best practices to your websites, automagically.') }}
+            {{ _('If you’re working with a custom or in-house solution, ABC can meet you there! Through tools like the
+            ABC optimizer, you can apply common performance best practices to your websites, automagically.') }}
           </p>
         </div>
         {% with %}
           {% set square = true %}
           {% set href = g.doc("/content/amp-dev/sambo/guide-tutorial/optimize-measure/amp-optimizer-guide/index.md", locale=doc.locale).url.path %}
-          {% set text = _("Using an AMP Optimizer") %}
+          {% set text = _("Using an ABC Optimizer") %}
           {% include '/views/2021/partials/content/link.j2' %}
         {% endwith %}
       </div>
@@ -192,8 +192,8 @@ frameworks:
             {{ _('Powerful components, anywhere') }}
           </h2>
           <p>
-            {{ _('Not ready to fully commit to AMP but love our components? No problem! Through Bento, you can use
-            AMP\'s well-tested, cross-browser compatible and accessible components anywhere on the web!') }}
+            {{ _('Not ready to fully commit to ABC but love our components? No problem! Through Bento, you can use
+            ABC\'s well-tested, cross-browser compatible and accessible components anywhere on the web!') }}
           </p>
         </div>
         {% with %}
