--- a/pages/content/amp-dev/about/ads.html
+++ b/pages/content/amp-dev/about/ads.html
@@ -1,7 +1,7 @@
 ---
-$title: AMP Ads
+$title: ABC Ads
 $view: /views/overview/what-is-amp.j2
-description: A growing number of publishers and advertisers are adopting AMP to deliver faster and more engaging content to their users. As your clients embrace the speed of AMP and ...
+description: A growing number of publishers and advertisers are adopting ABC to deliver faster and more engaging content to their users. As your clients embrace the speed of ABC and ...
 sharing_images:
   square: /static/img/sharing/about-ads-1x1.png
   wide: /static/img/sharing/about-ads-600x314.png
@@ -35,8 +35,8 @@ kpis:
             <svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#bolt-solid"></use></svg>
           </div>
 
-          <h2 class="ap-o-stage-content-subline">{{ _('AMP Ads') }}</h2>
-          <h1 class="ap-o-stage-content-headline">{{ _('Use AMP to build and serve lightning fast, safe ads to pages and stories.') }}</h1>
+          <h2 class="ap-o-stage-content-subline">{{ _('ABC Ads') }}</h2>
+          <h1 class="ap-o-stage-content-headline">{{ _('Use ABC to build and serve lightning fast, safe ads to pages and stories.') }}</h1>
 
           {% do doc.styles.addCssFile('/css/components/atoms/button.css') %}
           <a href="../documentation/guides-and-tutorials/start/create_amphtml_ad/index.md?format=ads" class="ap-o-stage-content-button ap-a-btn">{{ _('Start developing') }}</a>
@@ -51,10 +51,10 @@ kpis:
 <section class="ap--content">
   <div class="ap--container">
     <div class="ap-m-copy ap-m-copy-left" amp-fx="fade-in fly-in-left" data-margin-start="5%" data-duration="1s" data-fly-in-distance="5%">
-      <h1>{{ _('AMP<br> Ads') }}</h1>
+      <h1>{{ _('ABC<br> Ads') }}</h1>
       <h5>{{ _('These days, if it isn’t instant - it’s not fast enough. Even the most memorable creative won’t serve its purpose if the ad is slow and disruptive for a user.') }}</h5>
-      <p>{{ _('AMP is fundamentally changing the way ads are built, delivered and measured on the web, making them faster and minimizing disruptions for users. This increases viewability and click-through rates to improve monetization, making everyone happy: users, publishers and advertisers alike.') }}</p>
-      <p>{{ _('Advertising continues to be the cornerstone of every publisher’s business model; AMP is fundamentally changing the way ads are built and delivered on the web by supporting ads that are fast, safe, compelling and effective for users.') }}</p>
+      <p>{{ _('ABC is fundamentally changing the way ads are built, delivered and measured on the web, making them faster and minimizing disruptions for users. This increases viewability and click-through rates to improve monetization, making everyone happy: users, publishers and advertisers alike.') }}</p>
+      <p>{{ _('Advertising continues to be the cornerstone of every publisher’s business model; ABC is fundamentally changing the way ads are built and delivered on the web by supporting ads that are fast, safe, compelling and effective for users.') }}</p>
       <div class="ap-o-component-visual-link">
         <a href="../documentation/guides-and-tutorials/index.html?format=ads" class="ap-m-lnk ap-m-lnk-square">
           <div class="ap-a-ico ap-m-lnk-icon">
@@ -72,11 +72,11 @@ kpis:
     <div class="ap--container">
       <div class="ap-m-copy ap-m-copy-left" amp-fx="fade-in fly-in-left" data-duration="1s" data-fly-in-distance="5%">
         <h1>{{ _('A faster way to grow your business') }}</h1>
-        <p>{{ _('A growing number of publishers and advertisers are adopting AMP to deliver faster and more engaging content to their users. As your clients embrace the speed of AMP and more users consume content on AMP pages, ensure that your business is positioned for the future and integrate your technology with AMP. Speeding up ads is the fastest way to boost performance.') }}</p>
-        <p>{{ _('AMP ads greatly improve the mobile internet through their intelligent design and pre-loading features. This leads to increased traffic, higher sales conversion rates and more pages per visit - delivering the value you’re looking for in your ads.') }}</p>
-        <p>{{ _('Although AMP pages support traditional HTML ads, these ads can be slow to load. To make ads themselves as fast as the rest of the AMP page, you can build ads in AMPHTML.') }}</p>
-        <p>{{ _('AMPHTML ads load as fast as content, increasing viewability and enticing engagement. AMPHTML ads are only delivered after being validated, ensuring that the ads are free of malware.') }}</p>
-        <p>{{ _('Ads created with AMPHTML are served on both AMP and non-AMP pages. By building an ad with AMP, you can deliver a memorable brand experience everywhere without worrying about speed and platform compatibility.') }}</p>
+        <p>{{ _('A growing number of publishers and advertisers are adopting ABC to deliver faster and more engaging content to their users. As your clients embrace the speed of ABC and more users consume content on ABC pages, ensure that your business is positioned for the future and integrate your technology with ABC. Speeding up ads is the fastest way to boost performance.') }}</p>
+        <p>{{ _('ABC ads greatly improve the mobile internet through their intelligent design and pre-loading features. This leads to increased traffic, higher sales conversion rates and more pages per visit - delivering the value you’re looking for in your ads.') }}</p>
+        <p>{{ _('Although ABC pages support traditional HTML ads, these ads can be slow to load. To make ads themselves as fast as the rest of the ABC page, you can build ads in ABCHTML.') }}</p>
+        <p>{{ _('ABCHTML ads load as fast as content, increasing viewability and enticing engagement. ABCHTML ads are only delivered after being validated, ensuring that the ads are free of malware.') }}</p>
+        <p>{{ _('Ads created with ABCHTML are served on both ABC and non-ABC pages. By building an ad with ABC, you can deliver a memorable brand experience everywhere without worrying about speed and platform compatibility.') }}</p>
       <div class="ap-o-component-visual-link">
         <a href="../documentation/guides-and-tutorials/start/create_amphtml_ad/index.md" class="ap-m-lnk ap-m-lnk-square">
           <div class="ap-a-ico ap-m-lnk-icon">
@@ -119,7 +119,7 @@ kpis:
           {% do doc.icons.useIcon('icons/exclamation.svg') %}
           <svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#exclamation"></use></svg>
         </div>
-        <h1 class="ap-m-headline-icon-hl">{{ _('The benefits of AMP ads') }}</h1>
+        <h1 class="ap-m-headline-icon-hl">{{ _('The benefits of ABC ads') }}</h1>
       </div>
     </div>
 
@@ -165,7 +165,7 @@ kpis:
           {% do doc.icons.useIcon('icons/internal.svg') %}
           <svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#internal"></use></svg>
         </div>
-        <span class="ap-m-lnk-text">{{ _('Read on about AMP ads') }}</span>
+        <span class="ap-m-lnk-text">{{ _('Read on about ABC ads') }}</span>
       </a>
     </div>
 
@@ -200,10 +200,10 @@ kpis:
 <section class="ap--content">
   <div class="ap--container">
     <div class="ap-m-copy ap-m-copy-left" amp-fx="fade-in fly-in-left" data-margin-start="5%" data-duration="1s" data-fly-in-distance="5%">
-      <h1>{{ _('AMP for advertisers') }}</h1>
+      <h1>{{ _('ABC for advertisers') }}</h1>
       <h5>{{ _('Grow engagement and increase conversions with faster experiences') }}</h5>
-      <p>{{ _('The average mobile site takes 19 seconds to load over a 3G connection. Coupled with the fact that conversions fall by 12% for every additional second a webpage takes to load, you can safely assume two things: speed equals performance, and most advertiser campaigns have room to improve. That’s where you come in. As an SSP, DSP, analytics provider, or anything in between, embracing speed means improving campaign performance, delivering quality user experiences, and establishing yourself as the adtech platform for the fast web. Join the hundreds of technology platforms currently supporting the open source AMP ecosystem.') }}</p>
-      <p>{{ _('AMP offers a way for you to give users a faster experience everywhere: on ads, landing pages or on your entire website. AMP ads help users engage with your brand and improve the performance of your campaigns. When your target audience lands on an AMP page, they get what they’re looking for in the moment they’re looking for it. The net result – they’re more likely to be engaged with and receptive to your brand’s messages, and more likely to take the actions you’re guiding them towards like completing a purchase.') }}</p>
+      <p>{{ _('The average mobile site takes 19 seconds to load over a 3G connection. Coupled with the fact that conversions fall by 12% for every additional second a webpage takes to load, you can safely assume two things: speed equals performance, and most advertiser campaigns have room to improve. That’s where you come in. As an SSP, DSP, analytics provider, or anything in between, embracing speed means improving campaign performance, delivering quality user experiences, and establishing yourself as the adtech platform for the fast web. Join the hundreds of technology platforms currently supporting the open source ABC ecosystem.') }}</p>
+      <p>{{ _('ABC offers a way for you to give users a faster experience everywhere: on ads, landing pages or on your entire website. ABC ads help users engage with your brand and improve the performance of your campaigns. When your target audience lands on an ABC page, they get what they’re looking for in the moment they’re looking for it. The net result – they’re more likely to be engaged with and receptive to your brand’s messages, and more likely to take the actions you’re guiding them towards like completing a purchase.') }}</p>
       <div class="ap-o-component-visual-link">
         <a href="../documentation/guides-and-tutorials/learn/intro-to-amphtml-ads.md" class="ap-m-lnk ap-m-lnk-square">
           <div class="ap-a-ico ap-m-lnk-icon">
@@ -222,13 +222,13 @@ kpis:
 
   <div class="ap--container">
     <div class="ap-m-copy ap-m-copy-left" amp-fx="fade-in fly-in-left" data-margin-start="5%" data-duration="1s" data-fly-in-distance="5%">
-      <h1>{{ _('What’s the difference between an AMPHTML ad and a regular ad? Seconds.') }}</h1>
+      <h1>{{ _('What’s the difference between an ABCHTML ad and a regular ad? Seconds.') }}</h1>
     </div>
   </div>
 
   <div class="ap--shift-cards-grid ap--container">
     <div class="ap-m-shift-card ap-m-shift-card-1 small">
-      <div class="ap-m-shift-card-title">{{ _('AMPHTML Ad') }}</div>
+      <div class="ap-m-shift-card-title">{{ _('ABCHTML Ad') }}</div>
       {% do doc.styles.addCssFile('css/components/molecules/ghost-frame-mobile.css') %}
       <div class="ap-m-ghost-frame-mobile">
         <amp-video
@@ -237,7 +237,7 @@ kpis:
           layout="responsive"
           src="/static/img/amp_ad_video_left.mp4"
           poster="/static/img/amp_ad_video_left.jpg"
-          title="An ad implemented as AMPHTML Ad"
+          title="An ad implemented as ABCHTML Ad"
           autoplay
           loop
         ></amp-video>
