--- a/pages/content/amp-dev/about/email.html
+++ b/pages/content/amp-dev/about/email.html
@@ -1,7 +1,7 @@
 ---
-$title: AMP Email
+$title: ABC Email
 $view: /views/overview/what-is-amp.j2
-description: AMP for email allows senders to include AMP components inside rich engaging emails, making modern app functionality available within email. The AMP email format provides ...
+description: ABC for email allows senders to include ABC components inside rich engaging emails, making modern app functionality available within email. The ABC email format provides ...
 sharing_images:
   square: /static/img/sharing/about-email-1x1.png
   wide: /static/img/sharing/about-email-600x314.png
@@ -25,8 +25,8 @@ faq: !g.yaml /shared/data/faq.yaml
             <svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#bolt-solid"></use></svg>
           </div>
 
-          <h2 class="ap-o-stage-content-subline">{{ _('AMP Email') }}</h2>
-          <h1 class="ap-o-stage-content-headline">{{ _('Use AMP to send interactive, dynamic emails.') }}</h1>
+          <h2 class="ap-o-stage-content-subline">{{ _('ABC Email') }}</h2>
+          <h1 class="ap-o-stage-content-headline">{{ _('Use ABC to send interactive, dynamic emails.') }}</h1>
 
           {% do doc.styles.addCssFile('/css/components/atoms/button.css') %}
           <a href="../documentation/guides-and-tutorials/start/create_email.md?format=email" class="ap-o-stage-content-button ap-a-btn">{{ _('Start developing') }}</a>
@@ -41,7 +41,7 @@ faq: !g.yaml /shared/data/faq.yaml
 <section class="ap--content">
   <div class="ap--container-fluid">
     <div class="ap-m-copy ap-m-copy-left-small" amp-fx="fade-in fly-in-left" data-margin-start="5%" data-duration="1s" data-fly-in-distance="5%">
-      <h1>{{ _('AMP<br> Email') }}</h1>
+      <h1>{{ _('ABC<br> Email') }}</h1>
       <h5>{{ _('A whole new world of possibilities for content engagement') }}</h5>
 
       {% do doc.styles.addCssFile('/css/components/atoms/video.css') %}
@@ -49,8 +49,8 @@ faq: !g.yaml /shared/data/faq.yaml
         <amp-youtube id="myLiveChannel" data-videoid="FsvY5p3YDJ8" width="358" height="204" layout="responsive"></amp-youtube>
       </figure>
 
-      <p>{{ _('AMP for email allows senders to include AMP components inside rich engaging emails, making modern app functionality available within email. The AMP email format provides a subset of AMPHTML components for use in email messages, that allows recipients of AMP emails to interact dynamically with content directly in the message.') }}</p>
-      <p>{{ _('More than 270 billion emails are sent every day, it is the pillar of many consumer and enterprise workflows. However the content that is sent in an email message is still limited – messages are static, can become out of date, and are not actionable without opening a browser. AMP email seeks to enhance and modernize the email experience through added support for dynamic content and interactivity while keeping users safe.') }}</p>
+      <p>{{ _('ABC for email allows senders to include ABC components inside rich engaging emails, making modern app functionality available within email. The ABC email format provides a subset of ABCHTML components for use in email messages, that allows recipients of ABC emails to interact dynamically with content directly in the message.') }}</p>
+      <p>{{ _('More than 270 billion emails are sent every day, it is the pillar of many consumer and enterprise workflows. However the content that is sent in an email message is still limited – messages are static, can become out of date, and are not actionable without opening a browser. ABC email seeks to enhance and modernize the email experience through added support for dynamic content and interactivity while keeping users safe.') }}</p>
       <div class="ap-o-component-visual-link">
         <a href="../documentation/guides-and-tutorials/start/create_email.md" class="ap-m-lnk ap-m-lnk-square">
           <div class="ap-a-ico ap-m-lnk-icon">
@@ -86,8 +86,8 @@ faq: !g.yaml /shared/data/faq.yaml
   <div class="ap--container-fluid">
     <div class="ap-m-copy ap-m-copy-left-small" amp-fx="fade-in fly-in-left" data-margin-start="5%" data-duration="1s" data-fly-in-distance="5%">
       <h1>{{ _('Modern app functionality for email') }}</h1>
-      <h5>{{ _('Modernize email with the power of AMP') }}</h5>
-      <p>{{ _('AMP email is an expansion of the already existing blazingly fast and high-performing AMP project.   Expand your business through unprecedented features.') }}</p>
+      <h5>{{ _('Modernize email with the power of ABC') }}</h5>
+      <p>{{ _('ABC email is an expansion of the already existing blazingly fast and high-performing ABC project.   Expand your business through unprecedented features.') }}</p>
       <div class="ap-o-component-visual-link">
         <a href="../documentation/guides-and-tutorials/start/create_email.md" class="ap-m-lnk ap-m-lnk-square">
           <div class="ap-a-ico ap-m-lnk-icon">
@@ -105,7 +105,7 @@ faq: !g.yaml /shared/data/faq.yaml
   <div class="ap--container-fluid">
     <div class="ap-m-copy ap-m-copy-right-small" amp-fx="fade-in fly-in-right" data-margin-start="5%" data-duration="1s" data-fly-in-distance="5%">
       <h1>{{ _('Supported Email Clients') }}</h1>
-      <h5>{{ _('These email clients currently support receiving AMP Emails') }}</h5>
+      <h5>{{ _('These email clients currently support receiving ABC Emails') }}</h5>
       <div class="ap-o-component-visual-link">
       <div class="ap-o-teaser-grid-list">
         {% for tool in doc.faq.email.clients.list %}
@@ -126,7 +126,7 @@ faq: !g.yaml /shared/data/faq.yaml
           {% do doc.icons.useIcon('icons/exclamation.svg') %}
           <svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#exclamation"></use></svg>
         </div>
-        <h1 class="ap-m-headline-icon-hl">{{ _('The benefits of AMP email') }}</h1>
+        <h1 class="ap-m-headline-icon-hl">{{ _('The benefits of ABC email') }}</h1>
       </div>
     </div>
 
@@ -174,7 +174,7 @@ faq: !g.yaml /shared/data/faq.yaml
           {% do doc.icons.useIcon('icons/internal.svg') %}
           <svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#internal"></use></svg>
         </div>
-        <span class="ap-m-lnk-text">{{ _('Read on about AMP email') }}</span>
+        <span class="ap-m-lnk-text">{{ _('Read on about ABC email') }}</span>
       </a>
     </div>
 
