--- a/pages/content/amp-dev/about/mission-and-vision.html
+++ b/pages/content/amp-dev/about/mission-and-vision.html
@@ -1,7 +1,7 @@
 ---
 $title: Vision & Mission
 $order: 1
-description: Ourljhasdfbh vision is our north star we use to orient ourselves, and our mission describes the way we move into the direction of it.
+description: Our vision is our north star we use to orient ourselves, and our mission describes the way we move into the direction of it.
 $view: /views/overview/custom-content.j2
 
 flyout:
@@ -53,7 +53,7 @@ flyout:
 
   <div class="ap-m-copy no-margin ap-m-copy-center-small ap-m-biggy-background">
     <h1>{{ _('Design Principles') }}</h1>
-    <p>{{ _('These design principles are meant to guide the ongoing design and development of AMP. They should help us make internally consistent decisions.') }}</p>
+    <p>{{ _('These design principles are meant to guide the ongoing design and development of ABC. They should help us make internally consistent decisions.') }}</p>
   </div>
 
   <div class="ap--video ap-m-copy-center-small">
@@ -83,7 +83,7 @@ flyout:
         </div>
         <div class="ap-m-benefit-text">
           <span class="ap-m-benefit-text-headline">{{ _('Don’t design for a hypothetical faster future browser.') }}</span>
-          <span class="ap-m-benefit-text-copy">{{ _('We’ve chosen to build AMP as a library in the spirit of the <a href="https://github.com/extensibleweb/manifesto/blob/master/README.md">EXTENSIBLE WEB MANIFESTO</a> to be able to fix the web of today, not the web of tomorrow. AMP should be fast in today’s browsers. When certain optimizations aren’t possible with today’s platform, AMP developers should participate in standards development to get these added to the web platform.</span>') }}
+          <span class="ap-m-benefit-text-copy">{{ _('We’ve chosen to build ABC as a library in the spirit of the <a href="https://github.com/extensibleweb/manifesto/blob/master/README.md">EXTENSIBLE WEB MANIFESTO</a> to be able to fix the web of today, not the web of tomorrow. ABC should be fast in today’s browsers. When certain optimizations aren’t possible with today’s platform, ABC developers should participate in standards development to get these added to the web platform.</span>') }}
         </div>
       </div>
 
@@ -94,7 +94,7 @@ flyout:
         </div>
         <div class="ap-m-benefit-text">
           <span class="ap-m-benefit-text-headline">{{ _('Don’t break the web.') }}</span>
-          <span class="ap-m-benefit-text-copy">{{ _('Ensure that if AMP has outages or problems it doesn’t hurt the rest of the web. That means if the Google AMP Cache, the URL API or the library fails it should be possible for websites to gracefully degrade. If something works with an AMP cache it should also work without a cache.') }}</span>
+          <span class="ap-m-benefit-text-copy">{{ _('Ensure that if ABC has outages or problems it doesn’t hurt the rest of the web. That means if the Google Cache, the URL API or the library fails it should be possible for websites to gracefully degrade. If something works with an ABC cache it should also work without a cache.') }}</span>
         </div>
       </div>
     </div>
@@ -118,7 +118,7 @@ flyout:
         </div>
         <div class="ap-m-benefit-text">
           <span class="ap-m-benefit-text-headline">{{ _('Only do things if they can be made fast.') }}</span>
-          <span class="ap-m-benefit-text-copy">{{ _('Don’t introduce components or features to AMP that can’t reliably run at 60fps or hinder the instant load experience on today’s most common mobile devices.') }}</span>
+          <span class="ap-m-benefit-text-copy">{{ _('Don’t introduce components or features to ABC that can’t reliably run at 60fps or hinder the instant load experience on today’s most common mobile devices.') }}</span>
         </div>
       </div>
       <div class="ap-m-benefit principles">
@@ -128,7 +128,7 @@ flyout:
         </div>
         <div class="ap-m-benefit-text">
           <span class="ap-m-benefit-text-headline">{{ _('Prioritise things that improve the user experience – but compromise when needed.') }}</span>
-          <span class="ap-m-benefit-text-copy">{{ _('Some things can be made fast and are still a terrible user experience. AMPs should deliver a fantastic user experience and speed is just one part of that. Only compromise when lack of support for something would stop AMP from being widely used and deployed.') }}</span>
+          <span class="ap-m-benefit-text-copy">{{ _('Some things can be made fast and are still a terrible user experience. ABCs should deliver a fantastic user experience and speed is just one part of that. Only compromise when lack of support for something would stop ABC from being widely used and deployed.') }}</span>
         </div>
       </div>
 
