--- a/pages/content/amp-dev/about/stories.html
+++ b/pages/content/amp-dev/about/stories.html
@@ -84,7 +84,7 @@ templates:
           </div>
 
           <h2 class="ap-o-stage-content-subline">{{ _('Web Stories') }}</h2>
-          <h1 class="ap-o-stage-content-headline">{{ _('Use AMP to create visual stories on the web.') }}</h1>
+          <h1 class="ap-o-stage-content-headline">{{ _('Use ABC to create visual stories on the web.') }}</h1>
 
           {% do doc.styles.addCssFile('/css/components/atoms/button.css') %}
           <a href="../documentation/guides-and-tutorials/start/visual_story/index.md?format=stories" class="ap-o-stage-content-button ap-a-btn">{{ _('Start developing') }}</a>
@@ -101,7 +101,7 @@ templates:
     <div class="ap-m-copy ap-m-copy-left-small" amp-fx="fade-in fly-in-left" data-margin-start="5%" data-duration="1s" data-fly-in-distance="5%">
       <h1>{{ _('Web<br> Stories') }}</h1>
       <h5>{{ _('visual storytelling for the open web') }}</h5>
-      <p>{{ _('Web Stories immerse your readers in fast-loading full-screen experiences. Easily create visual narratives, with engaging animations and tappable interactions. The Web Story format (formerly known as AMP Stories) is free and part of the open web and are available for everyone to try on their websites. They can be shared and embedded across the web without being confined to a closed ecosystem or platform.') }}</p>
+      <p>{{ _('Web Stories immerse your readers in fast-loading full-screen experiences. Easily create visual narratives, with engaging animations and tappable interactions. The Web Story format (formerly known as ABC Stories) is free and part of the open web and are available for everyone to try on their websites. They can be shared and embedded across the web without being confined to a closed ecosystem or platform.') }}</p>
       <p>{{ _('Web Stories provide content publishers with a mobile-focused format for delivering news and information as visually rich, tap-through stories. Web Stories offers a robust set of advertising opportunities for advertisers and publishers to reach a unique audience on the web with immersive experiences.') }}</p>
     </div>
 
@@ -216,7 +216,7 @@ templates:
           {% do doc.icons.useIcon('icons/internal.svg') %}
           <svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#internal"></use></svg>
         </div>
-        <span class="ap-m-lnk-text">{{ _('Read on how AMP works') }}</span>
+        <span class="ap-m-lnk-text">{{ _('Read on how ABC works') }}</span>
       </a>
     </div>
 
@@ -228,7 +228,7 @@ templates:
 
       <div class="ap-m-copy ap-m-copy-left-small" amp-fx="fade-in fly-in-left" data-margin-start="5%" data-duration="1s" data-fly-in-distance="5%">
         <h2>{{ _('Images, videos and GIFs') }}</h2>
-        <p>{{ _('Web Stories are built with visually rich media, and whether you utilize pictures, videos or GIF assets is up to you. Images and videos expand to visually fill the readers’ screens, providing a smooth and fully engaging experience. AMP allows you to specify the file type to account for the user’s network connection and browser capabilities.') }}</p>
+        <p>{{ _('Web Stories are built with visually rich media, and whether you utilize pictures, videos or GIF assets is up to you. Images and videos expand to visually fill the readers’ screens, providing a smooth and fully engaging experience. ABC allows you to specify the file type to account for the user’s network connection and browser capabilities.') }}</p>
       </div>
 
       <div class="ap-m-copy ap-m-copy-right-small" amp-fx="fade-in fly-in-left" data-margin-start="5%" data-duration="1s" data-fly-in-distance="5%">
@@ -320,7 +320,7 @@ templates:
   <div class="ap-m-copy ap-m-copy-left-small">
     <h1>{{ _('Web Stories <br />Monetization Options') }}</h1>
     <h4>{{ _('Single Page Story Ad') }}</h4>
-    <p>{{ _('Story Ads are full screen, single page ads that appear within Web Stories. Advertisers/ Publishers can invite users to a web page, an AMP page or an App with a single tap. A story ad has a rich, flexible canvas that allows images, videos, animations or a combination of all those elements.<br>  Story ads are supported by Google Ad Manager and Google DV360 (Beta) with additional ad server support coming soon!') }}</p>
+    <p>{{ _('Story Ads are full screen, single page ads that appear within Web Stories. Advertisers/ Publishers can invite users to a web page, an ABC page or an App with a single tap. A story ad has a rich, flexible canvas that allows images, videos, animations or a combination of all those elements.<br>  Story ads are supported by Google Ad Manager and Google DV360 (Beta) with additional ad server support coming soon!') }}</p>
   </div>
 </section>
 
