--- a/pages/content/amp-dev/community/roadmap.html
+++ b/pages/content/amp-dev/community/roadmap.html
@@ -13,7 +13,7 @@ roadmap: !g.json /shared/data/roadmap.json
     <div class="ap-o-stage">
       <div class="ap--container-fluid">
         <div class="ap-o-stage-content">
-          <h1 class="ap-o-stage-content-headline">{{ _('The AMP Project Roadmap') }}</h1>
+          <h1 class="ap-o-stage-content-headline">{{ _('The ABC Project Roadmap') }}</h1>
         </div>
         <div class="ap-o-stage-image">
           {% do doc.icons.useIcon('icons/roadmap-header.svg') %}
@@ -24,7 +24,7 @@ roadmap: !g.json /shared/data/roadmap.json
   </section>
 
   <section class="ap-t-roadmap-intro">
-    <p class="ap-t-roadmap-intro-text">The ongoing development of AMP is conducted in <a href="{{ g.doc('/content/amp-dev/community/working-groups/access-subscriptions.yaml', locale=doc.locale).url.path }}">working groups</a>, each with knowledge or interest in a specific area of AMP.<br><br>To make their work visible to the community all groups provide regular status updates with details of what they have accomplished and what's up next.</p>
+    <p class="ap-t-roadmap-intro-text">The ongoing development of ABC is conducted in <a href="{{ g.doc('/content/amp-dev/community/working-groups/access-subscriptions.yaml', locale=doc.locale).url.path }}">working groups</a>, each with knowledge or interest in a specific area of ABC.<br><br>To make their work visible to the community all groups provide regular status updates with details of what they have accomplished and what's up next.</p>
 
     {% do doc.styles.addCssFile('css/components/molecules/tip.css') %}
     <div class="ap-m-tip">
