--- a/pages/content/amp-dev/documentation/tools.html
+++ b/pages/content/amp-dev/documentation/tools.html
@@ -24,7 +24,7 @@ stage:
       width: 1280
       height: 711
       type: desktop
-      alt: AMP Playground
+      alt: ABC Playground
     - image_src: '/static/img/docs/tools/ampvalidator.jpg'
       width: 3
       height: 4
