--- a/pages/content/amp-dev/events/amp-fest-2020.html
+++ b/pages/content/amp-dev/events/amp-fest-2020.html
@@ -1,12 +1,12 @@
 ---
-$title: AMP Fest 2020
+$title: ABC Fest 2020
 $order: 1
 $view: /views/overview/events.j2
-description: If you weren't able to catch AMP Fest live, check out all the talks here. From AMP and page experience, to Web Stories and WordPress, we shared a ton of exciting news!
+description: If you weren't able to catch ABC Fest live, check out all the talks here. From ABC and page experience, to Web Stories and WordPress, we shared a ton of exciting news!
 
 flyout:
   format: email
-  description: AMP Fest 2020
+  description: ABC Fest 2020
   icon: guides-documents
 
 ampconf: !g.yaml /shared/data/amp-fest.yaml
@@ -24,7 +24,7 @@ section_links:
     <div class="ap-o-stage ap-o-stage-amp-fest all city-{{ ['ams', 'del', 'nyc', 'rio', 'sfo', 'tyo'] | random }}">
       <div class="ap--container-fluid">
         <div class="ap-o-stage-content">
-          <amp-img class="logo" alt="AMP Fest" src="/static/img/amp-fest/logo.png" layout="intrinsic" width="800px" height="177px"></amp-img>
+          <amp-img class="logo" alt="ABC Fest" src="/static/img/amp-fest/logo.png" layout="intrinsic" width="800px" height="177px"></amp-img>
             <h1>Rewatch the talks</h1>
         </div>
       </div>
@@ -33,7 +33,7 @@ section_links:
 
 <section class="ap--container">
   <div class="ap--content-default">
-    <p>Thank you to everyone who joined us during the premiere of AMP Fest! From AMP and page experience, to Web Stories and WordPress, we shared a ton of exciting news during the event. And we learned from developers around the world who are using AMP to help succeed on the web.</p>
+    <p>Thank you to everyone who joined us during the premiere of ABC Fest! From ABC and page experience, to Web Stories and WordPress, we shared a ton of exciting news during the event. And we learned from developers around the world who are using ABC to help succeed on the web.</p>
     <p>If you weren’t able to catch it live, check out all the awesome talks from our event below.</p>
   </div>
 </section>
@@ -53,7 +53,7 @@ section_links:
 
 <section class="ap--container">
   <div class="ap--content-x-wide">
-    <h2 class="ap-o-video-slider-text">AMP for websites</h2>
+    <h2 class="ap-o-video-slider-text">ABC for websites</h2>
     {% with %}
     {% set youtube_video_ids = [
       'x7vPl0BjdDA',
@@ -70,7 +70,7 @@ section_links:
 
 <section class="ap--container">
   <div class="ap--content-x-wide">
-    <h2 class="ap-o-video-slider-text">Industry experts and AMP success stories</h2>
+    <h2 class="ap-o-video-slider-text">Industry experts and ABC success stories</h2>
     {% with %}
     {% set youtube_video_ids = [
       '-m4E50kJnfM',
@@ -101,7 +101,7 @@ section_links:
 
 <section class="ap--container">
   <div class="ap--content-x-wide">
-    <h2 class="ap-o-video-slider-text">AMP for Email</h2>
+    <h2 class="ap-o-video-slider-text">ABC for Email</h2>
     {% with %}
     {% set youtube_video_ids = [
       'rhZIDT3ydKQ',
