--- a/pages/content/amp-dev/events/amp-roadshow.html
+++ b/pages/content/amp-dev/events/amp-roadshow.html
@@ -1,11 +1,11 @@
 ---
-$title: AMP Roadshow
+$title: ABC Roadshow
 $order: 2
 $view: /views/overview/events.j2
 
 flyout:
   format: ads
-  description: AMP Roadshow
+  description: ABC Roadshow
   icon: wrench
 
 roadshow: !g.yaml /shared/data/roadshow.yaml
@@ -26,8 +26,8 @@ section_links:
     <div class="ap-o-stage ap-o-stage-websites all">
       <div class="ap--container-fluid">
         <div class="ap-o-stage-content ap-o-stage-content-roadshow">
-          <h1 class="ap-o-stage-content-headline">{{ _('AMP Roadshow') }}</h1>
-          <h2 class="ap-o-stage-content-subline">{{ _('Come join us in your city for a free, inclusive dev workshop with the AMP team.') }}</h2>
+          <h1 class="ap-o-stage-content-headline">{{ _('ABC Roadshow') }}</h1>
+          <h2 class="ap-o-stage-content-subline">{{ _('Come join us in your city for a free, inclusive dev workshop with the ABC team.') }}</h2>
           {% do doc.styles.addCssFile('/css/components/atoms/button.css') %}
           <a href="#Cities" class="ap-o-stage-content-button ap-a-btn">{{ _('Sign Up') }}</a>
         </div>
@@ -141,7 +141,7 @@ section_links:
         <div class="ap-a-ico ap-m-tip-icon">
           <svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#warning"></use></svg>
         </div>
-        <p>{{ _('Due to concerns around COVID-19, and in accordance with health guidance from the <a href="https://www.cdc.gov/coronavirus/2019-ncov/index.html" target="_blank" rel="noopener noreferrer">CDC</a>, <a href="https://www.who.int/emergencies/diseases/novel-coronavirus-2019" target="_blank" rel="noopener noreferrer">WHO</a>, and other health authorities, we are not holding in-person AMP events at present. This includes roadshows. Please check this page for updates.') }} </p>
+        <p>{{ _('Due to concerns around COVID-19, and in accordance with health guidance from the <a href="https://www.cdc.gov/coronavirus/2019-ncov/index.html" target="_blank" rel="noopener noreferrer">CDC</a>, <a href="https://www.who.int/emergencies/diseases/novel-coronavirus-2019" target="_blank" rel="noopener noreferrer">WHO</a>, and other health authorities, we are not holding in-person ABC events at present. This includes roadshows. Please check this page for updates.') }} </p>
       </div>
     </div>
     {% endif %}
@@ -187,9 +187,9 @@ section_links:
 
       <div class="ap-o-cities-next-events-checkback">
         <p>{{ _('Your city isn’t on the list? Check back soon for additional dates and cities. Or...') }}</p>
-        <h4>{{ _('Want the AMP Roadshow to visit your area?') }}</h4>
+        <h4>{{ _('Want the ABC Roadshow to visit your area?') }}</h4>
         <p>{{ _('That’s very kind. Fill out <a href="https://docs.google.com/forms/d/14B75eV89S1KaceNTG46ranAOPCj3wCLzgD3mxuGeUtU/viewform" target="_blank">this form</a> and we’ll see what we can do!') }}</p>
-        <h4>{{ _('Want to host your own AMP Roadshow?') }}</h4>
+        <h4>{{ _('Want to host your own ABC Roadshow?') }}</h4>
         <p>{{ _('Why not? Fill out <a href="https://docs.google.com/forms/d/1PMWCq1MTqg-AslvBMvMlU_ozjyZK7WZ-4fUVs0UlheE/viewform" target="_blank">this form</a>, and we’ll share with you our talks and all the materials you need to do it yourself!') }}</p>
       </div>
     </div>
@@ -219,7 +219,7 @@ section_links:
     <div class="ap-o-agenda-block">
       <div class="ap-o-agenda-content">
         <h3 class="ap-o-agenda-content-headline">{{ _('Agenda') }}</h3>
-        <p class="ap-o-agenda-content-sub-text">{{ _('The agenda is designed to enable you to build even more beautiful, interactive and canonical AMP pages. We welcome both newcomers to AMP and those who already ship AMP pages. <span>This is a sample agenda – schedule varies based on the city.</span>') }}
+        <p class="ap-o-agenda-content-sub-text">{{ _('The agenda is designed to enable you to build even more beautiful, interactive and canonical ABC pages. We welcome both newcomers to ABC and those who already ship ABC pages. <span>This is a sample agenda – schedule varies based on the city.</span>') }}
         <p>
 
         <ul class="ap-o-agenda-content-list">
@@ -260,7 +260,7 @@ section_links:
 
   <div class="ap-o-roadshow-content">
     <div class="ap-o-roadshow-content-headline">{{ _('Content') }}</div>
-    <div class="ap-o-roadshow-content-description">{{ _('We’ll cover a lot of ground in the few hours we have together. To enable you to build full-fledged AMP sites, the roadshow will deep dive into four big pillars:') }}</div>
+    <div class="ap-o-roadshow-content-description">{{ _('We’ll cover a lot of ground in the few hours we have together. To enable you to build full-fledged ABC sites, the roadshow will deep dive into four big pillars:') }}</div>
     <div class="ap-o-roadshow-content-pillar-list">
 
       {% for pillar in doc.roadshow.pillars %}
@@ -286,7 +286,7 @@ section_links:
   <div class="ap-m-amplify">
     <div class="ap-m-amplify-content">
       <h3 class="ap-m-amplify-content-headline">{{ _('Amplify Live!') }}</h3>
-      <div class="ap-m-amplify-content-subline">{{ _('During "Amplify live!", we’ll be on stage exploring the most interesting AMP challenges, allowing you to either follow along or do your own thing, like one of the many AMP codelabs. Bring your laptop!') }}</div>
+      <div class="ap-m-amplify-content-subline">{{ _('During "Amplify live!", we’ll be on stage exploring the most interesting ABC challenges, allowing you to either follow along or do your own thing, like one of the many ABC codelabs. Bring your laptop!') }}</div>
     </div>
   </div>
 
@@ -300,7 +300,7 @@ section_links:
       <div class="ap-m-faq-content-question">{{ _('Does it cost anything?') }}</div>
       <div class="ap-m-faq-content-answer">{{ _('No - tickets are free of charge.') }}</div>
       <div class="ap-m-faq-content-question">{{ _('Who is the event for?') }}</div>
-      <div class="ap-m-faq-content-answer">{{ _('Web developers and designers with an interest in AMP--whether you’ve had experience using AMP and want to create better experiences, you’re curious about how you can use AMP to improve your site, or you want to contribute to AMP to make it better for everyone.') }}</div>
+      <div class="ap-m-faq-content-answer">{{ _('Web developers and designers with an interest in ABC--whether you’ve had experience using ABC and want to create better experiences, you’re curious about how you can use ABC to improve your site, or you want to contribute to ABC to make it better for everyone.') }}</div>
       <div class="ap-m-faq-content-question">{{ _('Am I all set after registering?') }}</div>
       <div class="ap-m-faq-content-answer">{{ _('We expect that in some cities more people will be interested in attending than we can accommodate, so we will be confirming attendees on a case-by-case basis.') }}</div>
     </div>
